--- a/style.css
+++ b/style.css
@@ -29,3 +29,51 @@
 .news{
     border-bottom: 2px solid black;
 }
+.side-menu{
+    height:100%;
+    width:0;
+    position: fixed;
+    z-index:1;
+    top:0;
+    left:0;
+    background-color: burlywood;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+}
+.side-menu-list button{
+    margin-top: 5px;
+    border: none;
+    background: none;
+    width:120px;
+}
+.side-menu .closebtn{
+    position:absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-top:50px;
+    border: none;
+    background: none;
+}
+.side-menu-list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.side-menu-list button:hover{
+    background-color: beige;
+    border-radius: 3px;
+}
+.hamburger-menu{
+    display: none;
+}
+.input-area{
+    display: none;
+}
+/*휴대폰 세로 크기*/
+@media (max-width:479px) {
+    .hamburger-menu{
+        display:inline-block;
+    }
+}
