--- a/style.css
+++ b/style.css
@@ -1,82 +1,90 @@
-.head-line{
-    margin-top: 1em;
-    display: flex;
-    justify-content: center;
+.head-line {
+  margin-top: 1em;
+  display: flex;
+  justify-content: center;
 }
-.head-line svg{
-    width:430px;
+.head-line svg {
+  width: 430px;
 }
-.menus{
-    margin-top: 1em;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    border-top: 1px solid #ebebeb;
-    border-bottom: 4px double black;
+.menus {
+  margin-top: 1em;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  border-top: 1px solid #ebebeb;
+  border-bottom: 4px double black;
 }
-.menus button{
-    border: none;
-    background: none;
-    margin: 5px;
+.menus button {
+  border: none;
+  background: none;
+  margin: 5px;
 }
-.menus button:hover{
-    background-color: beige;
+.menus button:hover {
+  background-color: beige;
 }
-.news-img-size{
-    max-width: 100%;
-    max-height: 250px;
+.news-img-size {
+  max-width: 100%;
+  max-height: 250px;
 }
-.news{
-    border-bottom: 2px solid black;
+.news {
+  border-bottom: 2px solid black;
+  padding: 1em;
 }
-.side-menu{
-    height:100%;
-    width:0;
-    position: fixed;
-    z-index:1;
-    top:0;
-    left:0;
-    background-color: burlywood;
-    overflow-x: hidden;
-    transition: 0.5s;
-    padding-top: 60px;
+.side-menu {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: burlywood;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 60px;
 }
-.side-menu-list button{
-    margin-top: 5px;
-    border: none;
-    background: none;
-    width:120px;
+.side-menu-list button {
+  margin-top: 5px;
+  border: none;
+  background: none;
+  width: 120px;
 }
-.side-menu .closebtn{
-    position:absolute;
-    top: 0;
-    right: 25px;
-    font-size: 36px;
-    margin-top:50px;
-    border: none;
-    background: none;
+.side-menu .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-top: 50px;
+  border: none;
+  background: none;
 }
 .side-menu-list {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-.side-menu-list button:hover{
-    background-color: beige;
-    border-radius: 3px;
+.side-menu-list button:hover {
+  background-color: beige;
+  border-radius: 3px;
 }
-.hamburger-menu{
-    display: none;
+.hamburger-menu {
+  display: none;
 }
-#input-area{
-    display: none;
+#input-area {
+  display: none;
 }
-.alert-danger{
-    text-align: center;
+.alert-danger {
+  text-align: center;
+}
+.footer-pagination {
+  padding-top: 1em;
+}
+ul {
+  display: flex;
+  justify-content: center;
 }
 /*휴대폰 세로 크기*/
-@media (max-width:479px) {
-    .hamburger-menu{
-        display:inline-block;
-    }
+@media (max-width: 479px) {
+  .hamburger-menu {
+    display: inline-block;
+  }
 }
